kubernetes/flask-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-networking
spec:
  rules:
  - host: handwriting-recogniser-flask.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
